# ifq

./: .gitignore  Makefile  Pipfile  README.md  ifq.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
ifq/: __init__.py  cli.py
tests/: test_ifq.py  test_import.py
