[metadata]
name = ifq
author = Maurizio Branca
author-email = maurizio.branca@gmail.com
license = Apache2
long_description = file: README.md
url = http://pypi.python.org/pypi/foobar
requires-python = >=3.7
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
